--- a/body.tex
+++ b/body.tex
@@ -6,20 +6,23 @@
 
 \noindent{\bf Parallax}: A measure of the parallax precision in the best 18k square degrees of the survey (probably, the WFD area).  \\
 {\bf Proper Motion}: A measure of the proper motion precision in the best 18k square degrees of the survey (probably, the WFD area). \\
-{\bf Fast Microlensing events}: Microlensing events between 5 and 10 days in duration. \\
-{\bf Slow Microlensing events}: Microlensing events between 60 and 90 days in duration.\\
-{\bf SRD fO value}: \\
-{\bf Bright NEOs}: Fraction of with H=16 Near Earth Asteroid objects discovered. \\
-{\bf Faint NEOs}: NEO objects with H=22. Note this metric can have significant variations due to shot noise.\\
+{\bf Fast Microlensing events}: Fraction of microlensing events between 5 and 10 days in duration that are recovered. \\
+{\bf Slow Microlensing events}: Fraction of microlensing events between 60 and 90 days in duration that are recovered.\\
+{\bf SRD fO value}: The area that reaches 825 visits (all filters). Should be around 18,000 square degrees. \\
+{\bf Bright NEOs}: Fraction of H=16 Near Earth Asteroid objects discovered. \\
+{\bf Faint NEOs}: Fraction of NEO objects with H=22 recovered. Note this metric can have significant variations due to shot noise.\\
 {\bf TNOs}: Fraction of H=6.0 Trans Neptunian Objects discovered.  \\
-{\bf SNe}: The number of type Ia supernovae that are observed up to a redshift completeness limit. \\
+{\bf SNe}: The number of type Ia supernovae that are observed up to the redshift completeness limit. \\
 {\bf 3x2}: Figure of merit for the 3x2 correlation. Only uses i-band. \\
 {\bf Weak Lensing}: Number of visits in i-band that are suitable for weak lensing observations, includes an extinction cut. \\
 {\bf Transients, KNe}: The PrestoKNe metric. This metric generates 10,000 events. Unfortunately, in the baseline only around 400 of the events are detected, so we expect a run-to-run shot noise of ~5\%. The metric returns two scores ("P" and "S") which are highly correlated.  \\
+{\bf XRB}: X-ray binary events. This metric generates 10,000 events, and here we check how many pass the early detection criteria. \\
+{\bf Brown Dwarf}:  This metric computes the volume we can detect L7 Brown Dwarfs in. Because brown drawfs are very red objects, this metric will be mostly sensitive to depth in the $izy$\ filters.\\
 
 
 \subsection{DDF metrics}
 
+xxx--coadded depth, SNe. Maybe some AGN. Need photo-z
 
 
 \section{Baseline Evolution}
@@ -49,9 +52,11 @@
 \caption{Median coadded depths for the baseline-like simulations, normalized to the v2.1 baseline. The v2.1 baseline is $\sim$0.1 mags shallower than most previous baselines, mainly due to relaxing the weight put on taking observations at low airmass. \label{fig:baseline_mags}}
 \end{figure}
 
-The baseline footprints are shown in Figure~\ref{fig:baseline_foot}, while a check on how the different baselines roll is shown in Figure~\ref{fig:baseline_roll}. Science metrics and coadded depths are in Figures~\ref{fig:baseline2_radar} and~\ref{fig:baseline_mags}
+The baseline footprints are shown in Figure~\ref{fig:baseline_foot}, while a check on how the different baselines roll is shown in Figure~\ref{fig:baseline_roll}. Science metrics and coadded depths are in Figures~\ref{fig:baseline2_radar} and~\ref{fig:baseline_mags}. 
 
-{\bf Conclusions: The v2.1 baseline is a very minor change over v2.0, adding the Virgo cluster to the WFD footprint which slightly lowers the median coadded depth.}
+Shifting the footprint so the bulge is covered with a higher number of visits radically increases the microlensing and XRB metrics. The new footprint also improves the 3x2 metrics by increasing the amount of low extinction area covered in the WFD. The addition of rolling cadence boosts the SNe metric. The solar system metrics see a modest improvement moving to the v2.1 baseline. 
+
+The proper motion, parallax, and brown dwarf volume all see a slight decrease over previous baselines.
 
 \section{v2.0 Results}
 
@@ -71,9 +76,8 @@ bluer\_indx1\_v2.0 & 3.8 & 5.2 & 10.0 & 10.0 & 9.0 & 9.5 \\
 \label{table:blue}
 \end{table}
 
-We run a few simulations where we increase the fraction of time spent in $u$\ and $g$\ filters. The relative number of observations in each filter is listed in Table~\ref{table:blue}. Figure~\ref{fig:bluer_radar} shows no major improvement for any science case. We had expected SNe could benefit from added blue observations, however, since we still heavily favor red filters in bright time, the cadence of blue observations does not change enough to help the SNe metric. Similarly, TDEs often want more $u$\ observations, but the number added here is not sufficient to help the TDE metrics.
+We run a few simulations where we increase the fraction of time spent in $u$\ and $g$\ filters. The relative number of observations in each filter is listed in Table~\ref{table:blue}. Figure~\ref{fig:bluer_radar} shows no major improvement for any science case when increasing the blue fraction. We had expected SNe could benefit from added blue observations, however, since we still heavily favor red filters in bright time, the cadence of blue observations does not change enough to help the SNe metric. Similarly, TDEs often want more $u$\ observations, but the number added here is not sufficient to help the TDE metrics.
 
-{\bf Conclusion:  We find no major improvement in taking more blue observations, but should confirm the final filter depth distributions with a robust photo-z metric.}
 
 \begin{figure}
 \epsscale{0.5}
@@ -96,9 +100,7 @@ We run a few simulations where we increase the fraction of time spent in $u$\ an
 
 The long\_u1 run increases the $u$-band exposure time to 50s leaving the relative number of observations the same as the baseline while long\_u2 increases the exposure time but decreases the total number of observations in $u$. 
 
-Looks like we don't really have a metric that is sensitive to increasing $u$-depth. We do get a significant depth increase in $u$\ in both cases. If there is no case for the higher cadence, the long\_u2 run seems to have extra depth "for free".
-
-{\bf Conclusion:  Increasing the total time spent in $u$\ has detrimental effects to some science metrics. We currently don't see any science improvements from shifting to 50s $u$ exposures, but the final $u$ coadded depth increases $sim$0.15 mags and there is a small increase in the SRD fO metric.}
+Looks like we don't really have a metric that is sensitive to increasing $u$-depth. We do see significant codded depth increase in $u$\ in both cases. If there is no case for the higher cadence, the long\_u2 run seems to have extra depth "for free".
 
 
 \subsection{Rolling}
@@ -139,15 +141,54 @@ Adding rolling in the bulge doesn't have any perks. We might need more bulge-spe
 
 Figure~\ref{fig:rolling_more} shows having no rolling has a significant impact on SNe and KNe while starting rolling early to gain an additional season of rolling gives a boost with only a slight penalty to proper motions. 
 
-xxx--TODO:  Drop in the year3.5-4.5 plots for all the rolling sims
+We have not tested rolling in the dusty plane (or SCP or NES). There may be benefits to having some higher cadence observations in the plane, but we currently do not have metrics that would show that.
+
+The LMC and SMC are currently observed as part of the WFD region, and thus get higher and lower cadence seasons as part of rolling. 
 
 
-{\bf Conclusion: Starting rolling early looks to be a significant improvement for some metrics with a very minor penalty for astrometry. Note that if the survey ran an additional year, the proper motion penalty would be eliminated. }
+\begin{figure}
+\epsscale{0.5}
+\plotone{plots/rolling/noroll_v2_0_10yrs_Year2_5Count_night_gt_913_125000_and_night_lt_1278_375000_HEAL_SkyMap.pdf}
+\plotone{plots/rolling/roll_early_v2_0_10yrs_Year2_5Count_night_gt_913_125000_and_night_lt_1278_375000_HEAL_SkyMap.pdf}
+\plotone{plots/rolling/rolling_all_sky_ns2_rw0_9_v2_0_10yrs_Year2_5Count_night_gt_913_125000_and_night_lt_1278_375000_HEAL_SkyMap.pdf}
+\epsscale{1}
+\caption{No rolling, early rolling, and rolling including the bulge.\label{fig:rolling_normal}}
+\end{figure}
 
 
-\subsection{Presto}
+\begin{figure}
+\epsscale{0.5}
+\plotone{plots/rolling/rolling_bulge_6_v2_0_10yrs_Year2_5Count_night_gt_913_125000_and_night_lt_1278_375000_HEAL_SkyMap.pdf}
+\plotone{plots/rolling/rolling_bulge_ns2_rw0_5_v2_0_10yrs_Year2_5Count_night_gt_913_125000_and_night_lt_1278_375000_HEAL_SkyMap.pdf}
+\plotone{plots/rolling/rolling_bulge_ns2_rw0_8_v2_0_10yrs_Year2_5Count_night_gt_913_125000_and_night_lt_1278_375000_HEAL_SkyMap.pdf}
+\plotone{plots/rolling/rolling_bulge_ns2_rw0_9_v2_0_10yrs_Year2_5Count_night_gt_913_125000_and_night_lt_1278_375000_HEAL_SkyMap.pdf}
+\epsscale{1}
+\caption{Rolling in the bulge, different number of bands and different rolling strengths.}
+\end{figure}
 
-The presto runs look to gather 3 observations in a night on various time scales.
+\begin{figure}
+\epsscale{0.5}
+\plotone{plots/rolling/six_rolling_ns6_rw0_5_v2_0_10yrs_Year2_5Count_night_gt_913_125000_and_night_lt_1278_375000_HEAL_SkyMap.pdf}
+\plotone{plots/rolling/six_rolling_ns6_rw0_9_v2_0_10yrs_Year2_5Count_night_gt_913_125000_and_night_lt_1278_375000_HEAL_SkyMap.pdf}
+\epsscale{1}
+\caption{6-band rolling}
+\end{figure}
+
+\begin{figure}
+\epsscale{0.5}
+\plotone{plots/rolling/rolling_ns2_rw0_5_v2_0_10yrs_Year2_5Count_night_gt_913_125000_and_night_lt_1278_375000_HEAL_SkyMap.pdf}
+\plotone{plots/rolling/rolling_ns2_rw0_9_v2_0_10yrs_Year2_5Count_night_gt_913_125000_and_night_lt_1278_375000_HEAL_SkyMap.pdf}
+\plotone{plots/rolling/rolling_ns3_rw0_5_v2_0_10yrs_Year2_5Count_night_gt_913_125000_and_night_lt_1278_375000_HEAL_SkyMap.pdf}
+\plotone{plots/rolling/rolling_ns3_rw0_9_v2_0_10yrs_Year2_5Count_night_gt_913_125000_and_night_lt_1278_375000_HEAL_SkyMap.pdf}
+\epsscale{1}
+\caption{Half- and one-third-sky rolling.}
+\end{figure}
+
+
+
+\subsection{Presto and long gaps}
+
+The presto runs look to gather 3 observations in a night on various time scales. The long\_gaps simulations try to ensure time scales of several hours are observed.
 
 The variations we try. 1) Varying the goal length of the gap between 1.5 and 4 hours, 2) taking in near pairs (g+r, r+i, i+z) or mixed pairs (g+i, r+z, i+y) 3) Try to gather triplets half the time (every-other night).
 
@@ -163,7 +204,7 @@ The variations we try. 1) Varying the goal length of the gap between 1.5 and 4 h
 
 Results for observing triplets in a night are shown in Figure~\ref{fig:presto}. As expected, the KNe transient metric benefits from observing triples. Also as expected, only triples with gaps of 3-4 hours show improvements.  
 
-Observing triples every night results in much shallower u band final coadded depth (most likely because the triples are executing in dark time, forcing u observations into gray and bright). 
+Observing triples every night results in much shallower u band final coadded depth (most likely because the triples are executing in dark time, forcing u observations into gray and bright). Triples and long gaps force observations to be taken at higher airmass in general than the baseline, so all of the simulations in these groups have shallower final coadded depths than the baseline.
 
 All the simulations gathering triples greatly reduced the number of SNe recovered. Even if triples are only attempted on half the nights, SNe, faint NEOs, and astrometry all see significant reductions in their metrics.
 
@@ -175,9 +216,17 @@ xxx--need to double check what the astrometry SRD values are, the most aggressiv
 \caption{The SNe and astrometry metrics for the various presto runs. Baseline circled in red. \label{fig:presto_metics} }
 \end{figure}
 
-\subsection{Long Gaps}
 
-The long\_gaps sims are similar to the presto runs, but are more focused on gathering observations at longer timescales.
+\begin{figure}
+\plottwo{plots/long_gaps.pdf}{plots/long_gaps_mags.pdf}
+\caption{Observing long gaps for the entire survey}
+\end{figure}
+
+\begin{figure}
+\plottwo{plots/long_gaps_delayed.pdf}{plots/long_gaps_delayed_mags.pdf}
+\caption{Observing long gaps for the second half of the survey}
+\end{figure}
+
 
 \subsection{Vary Galactic Plane}
 
@@ -198,8 +247,6 @@ xxx--Varying the amount of time spent in the plane. This may be obsolete now wit
 
 
 Many of the solar system metrics are fairly insensitive to the fraction of time spent on the NES. I'll leave it to the solar system collaboration to make the case for where they think the optimal fraction is. Might be some potential to shave a little bit of time off of NES. The science gains from going from the baseline of 30\% down to something like 15\% are minimal though.
-
-{\bf Conclusions:  The SSSC should look in depth to confirm the impact of changing the NES fraction. Seems like the current level or slightly less time is the optimal.}
 
 
 \subsection{Microsurveys}
@@ -250,7 +297,8 @@ Many of the solar system metrics are fairly insensitive to the fraction of time 
 
 \begin{figure}
 \plotone{plots/twilight.pdf}
-\caption{Impact of observing NEOs in twilight time. Surprisingly reduces the fraction of faint NEOs recovered. \label{fig:twilight}}
+\plotone{plots/twi_neo21.pdf}
+\caption{Impact of observing NEOs in twilight time. Surprisingly reduces the fraction of faint NEOs recovered. Left panel shows the v2.0 run with 1s twilight exposures and the right shows v2.1 with 15s twilight exposures. \label{fig:twilight}}
 \end{figure}
 
 \begin{figure}
@@ -282,7 +330,7 @@ short\_exp: Covering the sky with short exposures. Note this may no longer be fe
 
 smc\_movie: Continuous observations of the SMC. This was only 2 nights on 15s exposures in g for 2780 visits. 
 
-twilight\_neo:  Using short exposures in twilight to look for NEOs. Note this may no longer be feasible with the latest constraints on how often the shutter can move without generating too much heat. There is little to no gain in the fraction of NEOs recovered with these simulations. Need to test with a population of objects interior to Venus to see if there is actually a science case for these observations.  
+twilight\_neo:  Using short (1s) exposures in twilight to look for NEOs by pointing at high airmass in the direction of the sun. Note this may no longer be feasible with the latest constraints on how often the shutter can move without generating too much heat. There is little to no gain in the fraction of NEOs recovered with these simulations. Need to test with a population of objects interior to Venus to see if there is actually a science case for these observations.  We have also run a twilight neo survey with 15s exposures in v2.1 and find similar results. The v2.1 simulations recover 0.2-1\% of H=20 Vatiras objects. The 1s sims recover 0.5-3.5\% of H=20 Vatiras objects.
 
 virgo\_cluster:  Adding the Virgo cluster to the WFD footprint. This was such a minor change that we adopted it into the v2.1 baseline.
 
@@ -339,8 +387,6 @@ good\_seeing\_u\_gsw3.0\_v2.1 & 8828 & 16390 & 23130 & 23479 & 22060 & 21330 \\
 \end{tabular}
 \end{table}
 
-{\bf Conclusions: The baseline currently comes close to covering the entire WFD area in good seeing conditions each year in $gri$. Adding $u$\ to good seeing does not seem feasible.}
-
 \subsection{Different Standard Exposure Time}
 
 
@@ -369,9 +415,6 @@ I'm not sure why proper motion and parallax benefit from shorter exposure times.
 This series of runs looks at preventing more than two observations to a point within a night. As expected, this helps SNe. Unexpectedly, this also boosts the KNe transient metric. We need to check why this happens and if it is real since the KNe metric should have a 5\% scatter.
 
 
-{\bf Conclusions:  Taking steps to suppress extra repeat visits within a night seems like it could help multiple science cases. It is tough to tell if the KNe metric increase is "real", or if the v2.1 baseline is simply a $\sim 2\sigma$ low realization.}
-
-
 \subsection{DDF Season Length}
 
 % From https://github.com/lsst-sims/sims_featureScheduler_runs2.1/blob/main/ddf_accourd/illustrate.ipynb
@@ -391,4 +434,22 @@ This series of runs looks at preventing more than two observations to a point wi
 xxx--currently looking at running the photo-z metric to get more info on filter distribution in WFD and the DDFs.
 
 xxx--We have some AGN metrics, I'm not sure they show much at the moment. We may need to configure, modify them a bit to get more info. These would be good for both the WFD and DDF areas. 
+
+
+\section{Executive Summary}
+
+\begin{itemize}
+   \item{The v2.1 baseline is a very minor change over v2.0, adding the Virgo cluster to the WFD footprint which slightly lowers the median coadded depth.}
+   \item{We find no major improvement in taking more observations in the $ug$\ filters, but should confirm the final filter depth distributions with a robust photo-z metric.}
+   \item{Increasing the total time spent in $u$\ has detrimental effects to some science metrics. We currently don't see any science improvements from shifting to 50s $u$ exposures, but the final $u$ coadded depth increases $\sim$0.15 mags and there is a small increase in the SRD fO metric.}
+   \item{Starting rolling early looks to be a significant improvement for some metrics with a very minor penalty for astrometry. Note that if the survey ran an additional year, the proper motion penalty should be eliminated.}
+   \item{The SSSC should look in depth to confirm the impact of changing the NES fraction. Seems like the current level or slightly less time is the optimal.}
+   \item{The baseline currently comes close to covering the entire WFD area in good seeing conditions each year in $gri$. Adding $u$\ to good seeing does not seem feasible.}
+   \item{Taking steps to suppress (extra) repeat visits within a night seems like it could help multiple science cases. It is tough to tell if the KNe metric increase is "real", or if the v2.1 baseline is simply a $\sim 2\sigma$ low realization.}
+   \item{There are proposed footprints for more Galactic Plane coverage, but we lack clear metrics to evaluate them for Galactic science.}
+   \item{We have tried a variety of twilight NEO surveys, no science metrics show a compelling improvement.}
+   \item{{\bf The biggest tension appears to be between long and short timescale transients (where short is of order a day). While all the simulations identify many transients, the ability to classify short timescale transients hurts the light curve coverage of long transients. }}
+
+
+\end{itemize}
 
